--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 ---
 layout: default
 ---
+<!DOCTYPE html>
 
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Excercises</title>
+		<h1>H1</h1>
+	</head>
+	
+	<body>
+		<p><b>Page</b> <i>for</i> excercise 1</p>
+		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2020%2F09%2F09%2Fhappy-dog-2.jpg" width="500" height="340">
+	
+		<a href="https://dipaish.github.io/www2020/index.html">Link</a>
+		</body>
+	
+	<head>
+		<h1>H2</h1>
+	</head>
+	
+	
+	
+	
+	
+	
+	
+	
+</html>
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
