--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 		<h1>H2</h1>
 	</head>
 	
+	<body>
 	<section class="main_review">
   <p>Dinos were great!</p>
 </section>
-	
+	</body>
 	
 	
 	
