--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	</head>
 	
 	<body>
-	<section class="main_review">
-  <p>Dinos were great!</p>
-</section>
+		<address>
+		<a href="https://www.hamk.fi/">Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna</a>
+		</address>
 	</body>
 	
 	
