--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Excercises</title>
+		<a href="index.html">Home</a>
+		<a href="index.html">About us</a>
+		<a href="index.html">Projects</a>
 		<h1>H1</h1>
 	</head>
 	
