--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<title>Excercises</title>
 		<a href="index.html">Home</a>
-		<a href="index.html">About us</a>
-		<a href="index.html">Projects</a>
+		<a href="aboutus.html">About us</a>
+		<a href="projects.html">Projects</a>
 		<h1>H1</h1>
 	</head>
 	
