--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<a href="aboutus.html">About us</a>
 		<a href="projects.html">Projects</a>
 		<h1>H1</h1>
+		<style>
+        body { background-color: YellowGreen; }
+        p { color: #fff; }
+    </style>
 	</head>
 	
 	<body>
