--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 	
 	<body>
 		<p><b>Page</b> <i>for</i> excercise 1</p>
+		<figure>
 		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2020%2F09%2F09%2Fhappy-dog-2.jpg" width="500" height="340">
-	
+		<figcaption>Dog</figcaption>
+		</figure>
+		
 		<a href="https://dipaish.github.io/www2020/index.html">Link</a>
 		</body>
 	
