--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		<address>
 		<a href="https://www.hamk.fi/">Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna</a>
 		</address>
+		<video src="https://youtu.be/Fkj6t9eEgEw">
+		</video>
 	</body>
 	
 	
