--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<address>
 		<a href="https://www.hamk.fi/">Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna</a>
 		</address>
-		<video src="https://www.youtube.com/watch?v=Fkj6t9eEgEw" controls>
+		<video src="video.mp4" controls>
 		Video
 		</video>
 	</body>
